--- a/CSS/style.css
+++ b/CSS/style.css
@@ -87,7 +87,7 @@ html{
 
 #home::before {
     content: "";
-    background: url('../bg1.jpg') no-repeat center center/cover;
+    background: url('bg1.jpg') no-repeat center center/cover;
     position: absolute;
     height: 653px;
     width: 100%;
@@ -155,7 +155,7 @@ html{
 #client-section::before {
     content: "";
     position: absolute;
-    background: url('../bg.jpg');
+    background: url('bg.jpg');
     width: 100%;
     height: 100%; /* Use 100% to cover the entire #client-section */
     top: 0;
@@ -191,7 +191,7 @@ width: 100%;
 height: 100%;
 z-index: -1;
 opacity: 0.7;
-background: url('../contact.jpg') no-repeat center center/cover;
+background: url('contact.jpg') no-repeat center center/cover;
 }
 
 #contact-box{
